[project]
name = "context-aware-wordlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faststream[rabbit]>=0.7.1",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "pydantic-settings[yaml]>=2.14.2",
]

[tool.uv]
package = true
